# molcore

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  setup_dev.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  wheels.yml
benchmarks/: bench_e2e.py  bench_fingerprints.py  bench_tanimoto.py  results_e2e.json
crates/molcore-core/: Cargo.toml
crates/molcore-core/src/: descriptors.rs  fingerprints.rs  graph_arrays.rs  ingest.rs  lib.rs  molecule.rs  similarity.rs
crates/molcore-core/tests/: test_fingerprints.rs  test_graph_arrays.rs  test_implicit_h.rs  test_ingest.rs
crates/molcore-io/: Cargo.toml
crates/molcore-io/src/: lib.rs  parquet.rs
docs/: announcements.md  migrating_from_rdkit.md
evals/compositional/: test_ml_pipeline.py  test_screening_pipeline.py
evals/per_skill/: test_conformer_skill.py  test_explainability.py  test_fingerprint_skill.py  test_predictor_skill.py  test_reaction_skill.py  test_scaffold_skill.py  test_similarity_skill.py  test_smarts_skill.py
evals/regression/: test_known_molecules.py
examples/: end_to_end_gnn.py  esol_benchmark.py  quickstart.ipynb  virtual_screening_pipeline.py
memory/procedural/: smiles_handling.md
memory/semantic/: chemistry_knowledge.md
molcore/: __init__.py  _validation.py  admet.py  agentic_rag.py  cli.py  databases.py  dti.py  explainability.py  gpu.py  io.py  molecule.py  pandas_tools.py  pipeline.py  predictor.py  protein.py  rdkit_bridge.py
molcore/featurizers/: __init__.py  descriptors.py  fingerprints.py  graph.py  pretrained.py
observability/events/: domain_events.py
observability/metrics/: skill_metrics.py
observability/traces/: otel_config.yaml
prompts/fragments/: safety_guidelines.md  smiles_instructions.md
prompts/system/: chemistry_agent.md
prompts/templates/: mol_query.md  scaffold_workflow.md  screening_query.md
skills/agentic_rag/: SKILL.md  allowlist.yaml  examples.jsonl
skills/fingerprint/: SKILL.md  allowlist.yaml  examples.jsonl
skills/molecular_featurization/: SKILL.md  allowlist.yaml  examples.jsonl
skills/property_prediction/: SKILL.md  allowlist.yaml  examples.jsonl
skills/property_prediction_ml/: SKILL.md  allowlist.yaml  examples.jsonl
skills/reaction/: SKILL.md  allowlist.yaml  examples.jsonl
skills/similarity_search/: SKILL.md  allowlist.yaml  examples.jsonl
tests/python/: test_agentic_rag.py  test_analysis.py  test_bioinformatics.py  test_clustering_and_cv.py  test_databases.py  test_dataset_enhancements.py  test_depiction.py  test_descriptors_full.py  test_diversity_and_gnn.py  test_dti.py  test_explainability.py  test_gpu.py  test_graph_hetero.py  test_io.py  test_mmpa.py  test_molecule.py  test_new_features.py  test_pandas_tools.py  test_pipeline.py  test_predictor.py  test_reactions.py  test_reliability.py  test_sdf_io.py  test_validation.py  test_zero_copy.py
tests/python/fixtures/: gcn_pre_v02.pt
tools/: registry.yaml
tools/local/: conformer.py  descriptors.py  featurize.py  predict.py  reaction.py  scaffold.py  screen.py  similarity.py  smarts.py
tools/mcp/: chembl_mcp.yaml  pubchem_mcp.yaml
typestubs/molcore/: _molcore.pyi
