[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name        = "molcore"
version     = "0.2.0"
description = "AI-native cheminformatics: Rust core + RDKit bridge + Python AI API"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "rdkit>=2023.9",
    "torch-geometric>=2.5",
]

[project.optional-dependencies]
pandas     = ["pandas>=2.0"]
optuna     = ["optuna>=3.0"]
pretrained = ["molfeat>=0.9", "datamol>=0.12.5"]
bio        = [
    "transformers>=4.30",      # ESM-2 protein language model
    "sentencepiece>=0.1.99",   # ESM tokenizer dependency
    "PyTDC>=0.4.1",            # ADMET + BindingDB benchmark data
    "scikit-learn>=1.3",       # ADMETPredictor random forest
    "pandas>=2.0",             # TDC returns DataFrames
]
dev        = ["maturin", "pytest", "pytest-benchmark", "pandas>=2.0", "nbformat>=5.0", "optuna>=3.0"]
all        = ["molcore[pandas,optuna,pretrained,bio]"]

[project.scripts]
molcore = "molcore.cli:main"

[tool.maturin]
features         = ["extension-module"]
python-source    = "."
module-name      = "molcore._molcore"
manifest-path    = "crates/molcore-core/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python", "evals"]

[tool.bandit]
exclude_dirs = ["tests", "evals", "benchmarks", "examples", "target"]
skips = [
    "B101",  # assert statements are idiomatic in scientific Python
    "B311",  # random.shuffle is non-cryptographic by design (dataset splits)
]
